# bin_optimize

./: .gitignore  LICENSE  README.md  README.rst  bin_optimize.py  conf.py  index.rst  setup.cfg  test.py  tests.py
.github/workflows/: deploy.yaml  testing.yaml
bin_optimize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: bin_optimize.rst  conf.py  index.rst  modules.rst  requirements.txt  typing.rst
source/: modules.rst
