[metadata]
name = bin_optimize
version = file: VERSION
description = Returns a tuple of Minimum bin size and optimized n-1 bins, after adjusting items from the bin provided
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/saripirala/bin-optimize
project_urls =
    Bug Tracker = https://github.com/saripirala/bin-optimize/issues
    Documentation = https://bin-optimize.readthedocs.io
    Source Code = https://github.com/saripirala/bin-optimize
author = Sairam Aripirala
author_email = sairam.aripirala@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    bin optimization

[options]
include_package_data = True
zip_safe = true
py_modules =
    bin_optimize
[options.extras_require]
testing =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    bin_optimize.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = bin_optimize, tests
exclude = build,docs,env
ignore = RST306,RST399,W503
import-order-style = pycharm
rst-directives = seealso
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields